feat: add support for upserting ledgers by subject
